--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Image Batch Converter",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "package": "rm -r ImageBatchConverter-darwin-x64 && electron-packager .",
+    "dmg": "electron-installer-dmg ImageBatchConverter-darwin-x64/ImageBatchConverter.app ImageBatchConverter --overwrite",
+    "main": "electron --inspect=5858 . "
   },
   "repository": "",
   "keywords": [
@@ -17,10 +20,13 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
-    "electron": "~1.7.8"
+    "electron": "~1.7.8",
+    "electron-installer-dmg": "^0.2.1",
+    "electron-packager": "^10.1.1"
   },
   "dependencies": {
     "jimp": "^0.2.28",
+    "jquery": "^3.2.1",
     "minimatch": "^3.0.4"
   }
 }
